--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <p>Pariatur iure ab sunt nesciunt, quibusdam odio iste cumque itaque, ipsa vel
                             exercitationem
                             ullam quos aut nostrum cupiditate fuga quaerat quam animi dolores. Sequi itaque, unde
-                            perferendis nemo debitis dolor.</p>
+                            perferendis nemo debitis .</p>
                     </div>
 
 
